--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -48,6 +48,10 @@ button:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+.photo-card-image {
+  height: 200px;
+  object-fit: cover;
+}
 
 .info {
   padding: 0 10px;
