--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -34,6 +34,7 @@ button:hover {
 
 .gallery {
   margin-top: 100px;
+  margin-bottom: 30px;
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(auto-fill, 300px);
